--- a/app/translations/da/core.json
+++ b/app/translations/da/core.json
@@ -1,17 +1,17 @@
 {
     "cancel": "Annuller",
     "add": "Ny",
-    "addit": "Add & Edit",
+    "addit": "Tilføj & Rediger",
     "save": "Gem",
     "saved": "Gemt!",
     "change": "Ændre",
     "delete": "Slet",
     "insert": "Indsæt",
     "ok": "Ok",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
+    "routes.error.invalid": "Ugyldig Panel URL",
+    "controller.error.invalid": "Ugyldig controller",
+    "controller.error.action": "Ugyldig handling",
+    "view.error.invalid": "Ugyldig visning:",
     "options.show": "Vis indstillinger",
     "options.hide": "Skjul indstillinger",
     "installation": "Installation",
@@ -37,9 +37,9 @@
     "login.password.label": "Adgangskode",
     "login.error": "Ugyldigt brugernavn eller adgangskode",
     "login.button": "Log ind",
-    "login.log.error.permissions": "Login log file is not writable.",
+    "login.log.error.permissions": "Login log fil er ikke skrivbar",
     "logout": "Log ud",
-    "topbar.error.class.definition": "Missing topbar definition for class:",
+    "topbar.error.class.definition": "Mangler topbar definition for class:",
     "dashboard": "Dashboard",
     "dashboard.index.pages.title": "Sider",
     "dashboard.index.pages.edit": "Rediger",
@@ -60,7 +60,7 @@
     "metatags.version.panel": "Panel version",
     "metatags.back": "Tilbage til dashboard",
     "metatags.files": "Website filer",
-    "site.delete.error": "The site cannot be deleted",
+    "site.delete.error": "Sitet kan ikke slettes",
     "pages.show.settings": "Side indstillinger",
     "pages.show.preview": "Se eksempel",
     "pages.show.changeurl": "Ændre URL",
@@ -91,7 +91,7 @@
     "pages.add.url.close": "Luk",
     "pages.add.url.help": "Format: små bogstaver a-z, 0-9 samt almindelige bindestreger",
     "pages.add.template.label": "Skabelon",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "Siden kunne ikke oprettes",
     "pages.add.error.title": "Titlen mangler",
     "pages.add.error.template": "Skabelonen manger",
     "pages.add.error.max.headline": "Der tillades ikke nye sider",
@@ -100,13 +100,13 @@
     "pages.url.uid.label.option": "Generer udfra titel",
     "pages.url.error.exists": "En side med samme appendiks eksisterer allerede",
     "pages.url.error.move": "URL-appendikset kunne ikke ændres",
-    "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
+    "pages.url.error.rights": "Du kan ikke ændre denne sides URL",
+    "pages.url.home.error.error": "URLen for forside og fejl side kan ikke ændres",
     "pages.toggle.position": "Position",
-    "pages.toggle.invisible": "invisible",
+    "pages.toggle.invisible": "usynlig",
     "pages.toggle.publish": "Ønsker du virkelig at ændre denne sides status til **synlig?**",
     "pages.toggle.hide": "Ønsker du virkelig at ændre denne sides status til **usynlig?**",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
+    "pages.toggle.error.error": "Status for fejl-siden kan ikke ændres",
     "pages.delete.headline": "Ønsker du virkelig at slette denne side?",
     "pages.delete.error.home.headline": "Forsiden kunne ikke slettes",
     "pages.delete.error.home.text": "Du forsøger at slette forsiden. Dette er ikke muligt da det ville lede til et uønsket oplevelse.",
@@ -129,8 +129,8 @@
     "subpages.index.visible.help": "Træk usynlige sider hertil for at sortere dem og gøre dem synlige.",
     "subpages.index.invisible": "Usynlige sider",
     "subpages.index.invisible.help": "Træk synlige sider hertil for at gøre dem usynlige.",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "Denne side må ikke have undersider",
+    "subpages.add.error.more": "Denne side kan ikke have flere undersider",
     "subpages.error.missing": "Siden kunne ikke findes",
     "files": "Filer",
     "files.index.headline": "Filer for",
@@ -140,15 +140,15 @@
     "files.index.upload.first.button": "Upload den første fil",
     "files.index.edit": "Rediger",
     "files.index.delete": "Slet",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
-    "files.add.error.extension.missing": "You cannot upload files without extension",
-    "files.add.error.extension.forbidden": "Forbidden file extension",
-    "files.add.error.mime.forbidden": "Forbidden mime type",
-    "files.add.error.htaccess": "htaccess files cannot be uploaded",
-    "files.add.error.invisible": "Invisible files cannot be uploaded",
-    "files.add.blueprint.type.error": "Page only allows:",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.index.error.disabled": "Denne side må ikke have filer",
+    "files.add.error.max": "Det maksimale antal filer for denne side er nået.",
+    "files.add.error.extension.missing": "Du kan ikke uploade filer uden fil-endelse",
+    "files.add.error.extension.forbidden": "Uacceptabel fil-endelse",
+    "files.add.error.mime.forbidden": "Uacceptabel fil-type",
+    "files.add.error.htaccess": "htaccess filer kan ikke uploades",
+    "files.add.error.invisible": "Usynlige filer kan ikke uploades",
+    "files.add.blueprint.type.error": "Siden tillader kun:",
+    "files.add.blueprint.size.error": "Siden tillader kun en fil-størrelse på:",
     "files.show.name.label": "Filnavn",
     "files.show.info.label": "Type / Vægt / Dimensioner",
     "files.show.link.label": "Offentligt link",
@@ -196,29 +196,29 @@
     "users.form.back": "Tilbage til brugere",
     "users.form.error.password.confirm": "Bekræft venligst adgangskoden",
     "users.form.error.update": "Brugeren kunne ikke redigeres",
-    "users.form.error.update.rights": "You are not allowed to update this user",
+    "users.form.error.update.rights": "Du har ikke tilladelse til at opdatere denne bruger",
     "users.form.error.create": "Brugeren kunne ikke oprettes",
     "users.form.error.permissions.title": "Account mappen er ikke skrivbar",
     "users.form.error.permissions.text": "Sørg venligst for at /site/accounts eksisterer og er skrivbar.",
     "users.delete.headline": "Ønsker du virkelig at slette denne bruger?",
     "users.delete.error": "Brugeren kunne ikke slettes",
-    "users.delete.error.permission": "You are not allowed to delete users",
-    "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.permission": "Du har ikke tilladelse til at slette brugere",
+    "users.delete.error.permission.single": "Du har ikke tilladelse til at slette denne bruger",
+    "users.delete.error.lastadmin": "Du kan ikke slette den sidste admin",
     "users.avatar.drop": "Træk et profilbillede hertil…",
     "users.avatar.click": "…eller klik for at vælge",
     "users.avatar.error.type": "Du kan kun uploade JPG, PNG og GIF filer",
     "users.avatar.error.folder.headline": "Avatar mappen er ikke skrivbar",
     "users.avatar.error.folder.text": "Opret venligst mappen <strong>/assets/avatars</strong> og sørg for at den er skrivbar for at kunne uploade profilbilleder.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.permission": "Du har ikke tilladelse til at ændre avatar",
     "users.avatar.delete.error": "Profilbilledet kunne ikke slettes",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "Du har ikke tilladelse til at slette denne brugers avatar",
     "users.avatar.delete.success": "Profilbilledet er nu slettet",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "Denne bruger har ikke nogen avatar",
     "users.error.missing": "Brugeren kunne ikke findes",
-    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
-    "form.error.missing": "The form cannot be found",
-    "form.construct.error.invalid": "Invalid form construction method",
+    "user.error.lastadmin": "Du er den eneste admin. Dette kan ikke ændres.",
+    "form.error.missing": "Formularen kunne ikke findes",
+    "form.construct.error.invalid": "Ugyldig formular construction method",
     "fields.required": "Påkrævet",
     "fields.date.label": "Dato",
     "fields.date.months": [
@@ -263,7 +263,7 @@
     "fields.structure.add": "Tilføj",
     "fields.structure.add.first": "Tilføj den første indtastning",
     "fields.structure.empty": "Ingen indtastninger endnu.",
-    "fields.structure.entry.error": "The item could not be found",
+    "fields.structure.entry.error": "Emnet blev ikke fundet",
     "fields.structure.cancel": "Annuller",
     "fields.structure.save": "Gem",
     "fields.structure.edit": "Rediger",
@@ -283,10 +283,10 @@
     "fields.toggle.no": "Nej",
     "fields.toggle.on": "Til",
     "fields.toggle.off": "Fra",
-    "fields.error.missing.controller": "The field controller file is missing",
-    "fields.error.missing.class": "The field controller class is missing",
-    "fields.error.route.invalid": "Invalid field route",
-    "fields.error.extended": "The field cannot be extended",
+    "fields.error.missing.controller": "En field controller fil mangler",
+    "fields.error.missing.class": "En field controller class mangler",
+    "fields.error.route.invalid": "Ugyldig field route",
+    "fields.error.extended": "Field kan ikke blive extended",
     "editor.link.url.label": "Indsæt URL",
     "editor.link.text.label": "Link tekst",
     "editor.link.text.help": "Link tekst er valgfri",
@@ -296,8 +296,8 @@
     "editor.email.text.help": "Link tekst er valgfri",
     "editor.file.empty": "Denne side har ingen filer",
     "editor.image.empty": "Denne side har ingen billeder",
-    "autocomplete.method.error": "Invalid autocomplete method",
-    "blueprints.error.default.missing": "Missing default blueprint",
+    "autocomplete.method.error": "Ugyldig autocomplete method",
+    "blueprints.error.default.missing": "Mangler standard blueprint",
     "error": "Fejl",
     "error.headline": "Fejl"
 }
