--- a/app/translations/de/core.json
+++ b/app/translations/de/core.json
@@ -11,7 +11,7 @@
     "routes.error.invalid": "Ungültige Panel-URL",
     "controller.error.invalid": "Ungültiger Controller",
     "controller.error.action": "Ungültige Aktion",
-    "view.error.invalid": "Ungültiger View: ",
+    "view.error.invalid": "Ungültiger View:",
     "options.show": "Optionen einblenden",
     "options.hide": "Optionen ausblenden",
     "installation": "Installation",
@@ -19,17 +19,17 @@
     "installation.check.text": "Kirby hat die folgenden Probleme festgestellt…",
     "installation.check.retry": "Wiederholen",
     "installation.check.error": "Es gibt einige Probleme!",
-    "installation.check.error.accounts": "\/site\/accounts ist nicht beschreibbar",
-    "installation.check.error.avatars": "\/assets\/avatars ist nicht beschreibbar",
-    "installation.check.error.blueprints": "Bitte lege den Ordner \/site\/blueprints an",
-    "installation.check.error.content": "\/content und alle Inhalte müssen beschreibbar sein.",
-    "installation.check.error.thumbs": "\/thumbs muss vorhanden und beschreibbar sein.",
+    "installation.check.error.accounts": "/site/accounts ist nicht beschreibbar",
+    "installation.check.error.avatars": "/assets/avatars ist nicht beschreibbar",
+    "installation.check.error.blueprints": "Bitte lege den Ordner /site/blueprints an",
+    "installation.check.error.content": "/content und alle Inhalte müssen beschreibbar sein.",
+    "installation.check.error.thumbs": "/thumbs muss vorhanden und beschreibbar sein.",
     "installation.signup.username.label": "Erstelle den ersten Benutzer",
     "installation.signup.username.placeholder": "Benutzername",
     "installation.signup.email.label": "Email",
     "installation.signup.email.placeholder": "mail@beispiel.de",
-    "installation.signup.language.label": "Sprache",
     "installation.signup.password.label": "Passwort",
+    "installation.signup.language.label": "Sprache",
     "installation.signup.button": "Erstellen",
     "login": "Anmelden",
     "login.welcome": "Bitte melde dich mit deinem neuen Account an",
@@ -39,7 +39,7 @@
     "login.button": "Anmelden",
     "login.log.error.permissions": "Die Anmeldelog-Datei ist nicht beschreibbar.",
     "logout": "Abmelden",
-    "topbar.error.class.definition": "Fehlende Topbar-Definition für Klasse: ",
+    "topbar.error.class.definition": "Fehlende Topbar-Definition für Klasse:",
     "dashboard": "Übersicht",
     "dashboard.index.pages.title": "Seiten",
     "dashboard.index.pages.edit": "Bearbeiten",
@@ -70,15 +70,15 @@
     "pages.show.changes.button": "Verwerfen",
     "pages.show.delete": "Seite löschen",
     "pages.show.subpages.title": "Seiten",
-    "pages.show.subpages.add": "Hinzufügen",
     "pages.show.subpages.edit": "Bearbeiten",
+    "pages.show.subpages.add": "Hinzufügen",
     "pages.show.subpages.empty": "Diese Seite hat keine Unterseiten",
     "pages.show.files.title": "Dateien",
-    "pages.show.files.add": "Hinzufügen",
     "pages.show.files.edit": "Bearbeiten",
+    "pages.show.files.add": "Hinzufügen",
     "pages.show.files.empty": "Diese Seite hat keine Dateien",
     "pages.show.error.permissions.title": "Die Seite ist nicht beschreibbar",
-    "pages.show.error.permissions.text": "Bitte überprüfe die Schreibrechte für \/content und alle Inhalte",
+    "pages.show.error.permissions.text": "Bitte überprüfe die Schreibrechte für /content und alle Inhalte",
     "pages.show.error.permissions.retry": "Wiederholen",
     "pages.show.error.notitle.title": "Das Blueprint hat kein Titelfeld",
     "pages.show.error.notitle.text": "Bitte füge ein Titelfeld ein und versuche es erneut",
@@ -126,10 +126,10 @@
     "subpages.index.add.first.text": "Diese Seite hat noch keine Unterseiten",
     "subpages.index.add.first.button": "Lege die erste Seite an",
     "subpages.index.visible": "Sichtbare Seiten",
-    "subpages.index.visible.help": "Ziehe unsichtbare Seiten hierher, um sie zu sortieren\/sichtbar zu machen",
+    "subpages.index.visible.help": "Ziehe unsichtbare Seiten hierher, um sie zu sortieren/sichtbar zu machen",
     "subpages.index.invisible": "Unsichtbare Seiten",
     "subpages.index.invisible.help": "Ziehe sichtbare Seiten hierher, um sie unsichtbar zu machen",
-    "subpages.add.error": "Keine Unterseiten für diese Seite zugelassen",
+    "subpages.add.error": "Diese Seite darf keine Unterseiten haben",
     "subpages.add.error.more": "Diese Seite kann keine weiteren Unterseiten haben",
     "subpages.error.missing": "Die Seite konnte nicht gefunden werden.",
     "files": "Dateien",
@@ -140,19 +140,19 @@
     "files.index.upload.first.button": "Lade die erste Datei hoch",
     "files.index.edit": "Bearbeiten",
     "files.index.delete": "Löschen",
-    "files.index.error.disabled": "Keine Dateien für diese Seite zugelassen",
+    "files.index.error.disabled": "Diese Seite darf keine Dateien haben",
     "files.add.error.max": "Die maximale Anzahl an Dateien für die aktuelle Seite ist erreicht.",
     "files.add.error.extension.missing": "Du kannst keine Dateien ohne Dateiendung hochladen",
     "files.add.error.extension.forbidden": "Verbotene Dateiendung",
     "files.add.error.mime.forbidden": "Verbotener MIME-Typ",
     "files.add.error.htaccess": "htaccess-Dateien können nicht hochgeladen werden",
     "files.add.error.invisible": "Versteckte Dateien können nicht hochgeladen werden",
-    "files.add.blueprint.type.error": "Seite erlaubt nur: ",
-    "files.add.blueprint.size.error": "Seite erlaubt nur eine Dateigröße von ",
+    "files.add.blueprint.type.error": "Seite erlaubt nur:",
+    "files.add.blueprint.size.error": "Seite erlaubt nur eine Dateigröße von",
     "files.show.name.label": "Dateiname",
-    "files.show.info.label": "Typ \/ Größe \/ Abmessungen",
+    "files.show.info.label": "Typ / Größe / Abmessungen",
     "files.show.link.label": "Öffentlicher Link",
-    "files.show.open": "Anzeigen\/Download",
+    "files.show.open": "Anzeigen/Download",
     "files.show.back": "Zurück",
     "files.show.replace": "Ersetzen",
     "files.show.delete": "Löschen",
@@ -196,20 +196,20 @@
     "users.form.back": "Zurück zur Benutzerübersicht",
     "users.form.error.password.confirm": "Bitte bestätige das Passwort",
     "users.form.error.update": "Der Benutzer konnte nicht gespeichert werden",
-    "users.form.error.update.rights": "Du kannst diesen Benutzer nicht aktualisieren",
+    "users.form.error.update.rights": "Du darfst diesen Benutzer nicht aktualisieren",
     "users.form.error.create": "Der Benutzer konnte nicht erstellt werden",
     "users.form.error.permissions.title": "Der accounts Ordner ist nicht beschreibbar",
-    "users.form.error.permissions.text": "Bitte stelle sicher, dass \/site\/accounts besteht und beschreibbar ist.",
+    "users.form.error.permissions.text": "Bitte stelle sicher, dass /site/accounts besteht und beschreibbar ist.",
     "users.delete.headline": "Willst du diesen Benutzer wirklich löschen?",
     "users.delete.error": "Der Benutzer konnte nicht gelöscht werden",
-    "users.delete.error.permission": "Du kannst keine Benutzer löschen",
-    "users.delete.error.permission.single": "Du kannst diesen Benutzer nicht löschen",
+    "users.delete.error.permission": "Du darfst keine Benutzer löschen",
+    "users.delete.error.permission.single": "Du darfst diesen Benutzer nicht löschen",
     "users.delete.error.lastadmin": "Du kannst den letzten Admin nicht löschen",
     "users.avatar.drop": "Ziehe ein Profilbild hierher…",
     "users.avatar.click": "…oder klicke, um ein Profilbild hochzuladen",
     "users.avatar.error.type": "Es sind nur JPG, PNG und GIF Dateien erlaubt.",
     "users.avatar.error.folder.headline": "Der Profilbild Ordner ist nicht beschreibbar",
-    "users.avatar.error.folder.text": "Bitte erstelle den Ordner <strong>\/assets\/avatars<\/strong> und stelle sicher, dass er beschreibbar ist.",
+    "users.avatar.error.folder.text": "Bitte erstelle den Ordner <strong>/assets/avatars</strong> und stelle sicher, dass er beschreibbar ist.",
     "users.avatar.error.permission": "Du darfst den Avatar nicht verändern",
     "users.avatar.delete.error": "Das Profilbild konnte nicht gelöscht werden",
     "users.avatar.delete.error.permission": "Du darfst den Avater dieses Users nicht löschen",
@@ -258,7 +258,7 @@
     "fields.number.label": "Nummer",
     "fields.number.placeholder": "#",
     "fields.page.label": "Seite",
-    "fields.page.placeholder": "pfad\/zur\/seite",
+    "fields.page.placeholder": "pfad/zur/seite",
     "fields.password.label": "Passwort",
     "fields.structure.add": "Hinzufügen",
     "fields.structure.add.first": "Füge den ersten Eintrag hinzu",
