--- a/app/translations/es_419/core.json
+++ b/app/translations/es_419/core.json
@@ -1,32 +1,32 @@
 {
     "cancel": "Cancelar",
     "add": "Agregar",
-    "addit": "Add & Edit",
+    "addit": "Agregar y Editar",
     "save": "Guardar",
     "saved": "¡Guardado!",
     "change": "Cambiar",
     "delete": "Eliminar",
     "insert": "Insertar",
     "ok": "OK",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
-    "options.show": "Mostrar Opciones",
+    "routes.error.invalid": "URL del Panel no válido",
+    "controller.error.invalid": "Controlador no válido",
+    "controller.error.action": "Acción no válida",
+    "view.error.invalid": "Vista no válida:",
+    "options.show": "Mostrar opciones",
     "options.hide": "Ocultar opciones",
     "installation": "Instalación",
-    "installation.check.headline": "Instalación Kirby Panel",
+    "installation.check.headline": "Instalación del Panel Kirby",
     "installation.check.text": "Kirby encontró los siguientes errores durante la instalación…",
     "installation.check.retry": "Reintentar",
     "installation.check.error": "¡Tenemos problemas!",
     "installation.check.error.accounts": "/site/accounts no es modificable",
     "installation.check.error.avatars": "/assets/avatars no es modificable",
     "installation.check.error.blueprints": "Por favor agrega una carpeta /site/blueprints",
-    "installation.check.error.content": "La carpeta \"contenido\" y todos sus archivos y carpetas deben de tener permiso para modificarse.",
+    "installation.check.error.content": "La carpeta \"contenido\" y todos sus archivos y subcarpetas deben de tener permiso para modificarse.",
     "installation.check.error.thumbs": "La carpeta \"thumbs\" debe ser modificable.",
     "installation.signup.username.label": "Crea tu primera cuenta",
     "installation.signup.username.placeholder": "Usuario",
-    "installation.signup.email.label": "Email",
+    "installation.signup.email.label": "Correo electrónico",
     "installation.signup.email.placeholder": "correo@ejemplo.com",
     "installation.signup.password.label": "Contraseña",
     "installation.signup.language.label": "Idioma",
@@ -37,7 +37,7 @@
     "login.password.label": "Contraseña",
     "login.error": "Usuario o Contraseña equivocada",
     "login.button": "Ingresar",
-    "login.log.error.permissions": "Login log file is not writable.",
+    "login.log.error.permissions": "El archivo de registro del inicio de sesión no es modificable",
     "logout": "Cerrar Sesión",
     "topbar.error.class.definition": "Missing topbar definition for class:",
     "dashboard": "Inicio",
@@ -91,7 +91,7 @@
     "pages.add.url.close": "Cerrar",
     "pages.add.url.help": "Formato: minúsculas a-z, 0-9 y guiones regulares",
     "pages.add.template.label": "Plantilla",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "La página no pudo ser eliminada",
     "pages.add.error.title": "Falta un título",
     "pages.add.error.template": "Falta una plantilla",
     "pages.add.error.max.headline": "No se permiten páginas nuevas",
@@ -102,7 +102,7 @@
     "pages.url.error.move": "El apéndice-url no pudo ser cambiado",
     "pages.url.error.rights": "You cannot change the URL of this page",
     "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
-    "pages.toggle.position": "Position",
+    "pages.toggle.position": "Posición",
     "pages.toggle.invisible": "invisible",
     "pages.toggle.publish": "¿En realidad deseas cambiar el estatus de esta página a **visible?**",
     "pages.toggle.hide": "¿En realidad deseas cambiar el estatus de esta página a **invisible?**",
