--- a/app/translations/pl/core.json
+++ b/app/translations/pl/core.json
@@ -8,10 +8,10 @@
     "delete": "Usuń",
     "insert": "Wstaw",
     "ok": "Ok",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
+    "routes.error.invalid": "Niewłaściwy adres URL panelu",
+    "controller.error.invalid": "Niewłaściwy kontroler",
+    "controller.error.action": "Niewłaściwa akcja",
+    "view.error.invalid": "Niewłaściwy widok:",
     "options.show": "Pokaż opcje",
     "options.hide": "Ukryj opcje",
     "installation": "Instalacja",
@@ -37,7 +37,7 @@
     "login.password.label": "Hasło",
     "login.error": "Niepoprawna nazwa użytkownika lub hasło",
     "login.button": "Zaloguj się",
-    "login.log.error.permissions": "Login log file is not writable.",
+    "login.log.error.permissions": "Plik dziennika logowania nie ma ustawionych praw do zapisu.",
     "logout": "Wyloguj się",
     "topbar.error.class.definition": "Missing topbar definition for class:",
     "dashboard": "Panel administracyjny",
@@ -53,13 +53,13 @@
     "dashboard.index.history.text": "Twoje ostatnio zmodyfikowane strony będą wyświetlane tutaj, aby łatwo je było odnaleźć ponownie później.",
     "dashboard.index.license.title": "Licencja Kirby",
     "metatags": "Ustawienia serwisu",
-    "metatags.info": "Kirby info",
+    "metatags.info": "Informacje nt. Kirby",
     "metatags.license": "Licencja Kirby",
-    "metatags.version.toolkit": "Toolkit version",
-    "metatags.version.kirby": "Kirby version",
-    "metatags.version.panel": "Panel version",
+    "metatags.version.toolkit": "Wersja toolkitu",
+    "metatags.version.kirby": "Wersja Kirby",
+    "metatags.version.panel": "Wersja panelu",
     "metatags.back": "Powróć do panelu administracyjnego",
-    "metatags.files": "Site files",
+    "metatags.files": "Pliki strony",
     "site.delete.error": "Strona nie może zostać usunięta",
     "pages.show.settings": "Ustawienia strony",
     "pages.show.preview": "Otwórz podgląd",
@@ -67,7 +67,7 @@
     "pages.show.invisible": "Status: niewidzialna",
     "pages.show.visible": "Status: widoczna",
     "pages.show.changes.text": "Masz niezapisane zmiany!",
-    "pages.show.changes.button": "Discard",
+    "pages.show.changes.button": "Odrzuć",
     "pages.show.delete": "Usuń tę stronę",
     "pages.show.subpages.title": "Strony",
     "pages.show.subpages.edit": "Edytuj",
@@ -102,7 +102,7 @@
     "pages.url.error.move": "Apendyks nie mógł zostać zmieniony",
     "pages.url.error.rights": "Nie możesz zmienić adres URL tej strony",
     "pages.url.home.error.error": "Adres URL dla strony głównej i błędu nie może być zmieniona",
-    "pages.toggle.position": "Position",
+    "pages.toggle.position": "Pozycja",
     "pages.toggle.invisible": "niewidoczny",
     "pages.toggle.publish": "Czy na pewno chcesz zmienić status strony na **widoczna**",
     "pages.toggle.hide": "Czy na pewno chcesz zmienić status strony na **niewidzialna**",
@@ -143,12 +143,12 @@
     "files.index.error.disabled": "Strona nie może mieć żadnych plików",
     "files.add.error.max": "Maksymalna liczba plików dla bieżącej stronie został osiągnięty.",
     "files.add.error.extension.missing": "Nie można przesyłać plików bez rozszerzenia",
-    "files.add.error.extension.forbidden": "Forbidden file extension",
-    "files.add.error.mime.forbidden": "Forbidden mime type",
+    "files.add.error.extension.forbidden": "Zabronione rozszerzenie pliku",
+    "files.add.error.mime.forbidden": "Zabroniony typ MIME",
     "files.add.error.htaccess": "Plik htaccess nie może być przesłany",
     "files.add.error.invisible": "Pliki ukryte nie mogą być przesłane",
-    "files.add.blueprint.type.error": "Page only allows:",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.add.blueprint.type.error": "Strona zezwala tylko na:",
+    "files.add.blueprint.size.error": "Strona zezwala tylko na pliki o rozmiarze",
     "files.show.name.label": "Nazwa pliku",
     "files.show.info.label": "Typ / Rozmiar / Wymiary",
     "files.show.link.label": "Publiczny link",
@@ -216,9 +216,9 @@
     "users.avatar.delete.success": "Zdjęcie profilowe zostało usunięte",
     "users.avatar.missing": "Ten użytkownik nie ma awataru",
     "users.error.missing": "Użytkownik nie został odnaleziony",
-    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
-    "form.error.missing": "The form cannot be found",
-    "form.construct.error.invalid": "Invalid form construction method",
+    "user.error.lastadmin": "Jesteś jedynym administratorem. To ustawienie nie może zostać zmienione.",
+    "form.error.missing": "Formularz nie może zostać odnaleziony",
+    "form.construct.error.invalid": "Nieprawidłowa metoda budowy formularza",
     "fields.required": "Wymagane",
     "fields.date.label": "Data",
     "fields.date.months": [
@@ -263,7 +263,7 @@
     "fields.structure.add": "Dodaj",
     "fields.structure.add.first": "Dodaj pierwszy wpis",
     "fields.structure.empty": "Nie ma jeszcze żadnych wpisów.",
-    "fields.structure.entry.error": "The item could not be found",
+    "fields.structure.entry.error": "Element nie mógł zostać odnaleziony",
     "fields.structure.cancel": "Anuluj",
     "fields.structure.save": "Zapisz",
     "fields.structure.edit": "Edytuj",
@@ -283,10 +283,10 @@
     "fields.toggle.no": "Nie",
     "fields.toggle.on": "Włącz",
     "fields.toggle.off": "Wyłącz",
-    "fields.error.missing.controller": "The field controller file is missing",
-    "fields.error.missing.class": "The field controller class is missing",
+    "fields.error.missing.controller": "Brak pliku field controller",
+    "fields.error.missing.class": "Brak klasy field controller",
     "fields.error.route.invalid": "Invalid field route",
-    "fields.error.extended": "The field cannot be extended",
+    "fields.error.extended": "Pole nie może zostać rozszerzone",
     "editor.link.url.label": "Wstaw URL",
     "editor.link.text.label": "Tekst linku",
     "editor.link.text.help": "Tekst linku jest opcjonalny",
@@ -296,8 +296,8 @@
     "editor.email.text.help": "Tekst linku jest opcjonalny",
     "editor.file.empty": "Ta strona nie ma plików",
     "editor.image.empty": "Ta strona nie ma obrazków",
-    "autocomplete.method.error": "Invalid autocomplete method",
-    "blueprints.error.default.missing": "Missing default blueprint",
+    "autocomplete.method.error": "Nieprawidłowa metoda autouzupełniania",
+    "blueprints.error.default.missing": "Brak domyślnego szablonu",
     "error": "Błąd",
     "error.headline": "Błąd"
 }
