--- a/app/translations/pt_PT/core.json
+++ b/app/translations/pt_PT/core.json
@@ -1,17 +1,17 @@
 {
     "cancel": "Cancelar",
     "add": "Adicionar",
-    "addit": "Add & Edit",
+    "addit": "Adicionar e editar",
     "save": "Gravar",
     "saved": "Gravado!",
-    "change": "Change",
+    "change": "Mudar",
     "delete": "Apagar",
     "insert": "Inserir",
     "ok": "Ok",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
+    "routes.error.invalid": "URL de panel inválida",
+    "controller.error.invalid": "Controlador inválido",
+    "controller.error.action": "Ação inválida",
+    "view.error.invalid": "Vista inválida:",
     "options.show": "Exibir opções",
     "options.hide": "Ocultar opções",
     "installation": "Instalação",
@@ -37,9 +37,9 @@
     "login.password.label": "Palavra-passe",
     "login.error": "Utilizador ou Palavra-passe inválida",
     "login.button": "Entrar",
-    "login.log.error.permissions": "Login log file is not writable.",
+    "login.log.error.permissions": "Ficheiro de log do login não é descritível.",
     "logout": "Sair",
-    "topbar.error.class.definition": "Missing topbar definition for class:",
+    "topbar.error.class.definition": "Falta a definição topbar da classe:",
     "dashboard": "Painel",
     "dashboard.index.pages.title": "Páginas",
     "dashboard.index.pages.edit": "Editar",
@@ -51,23 +51,23 @@
     "dashboard.index.metatags.edit": "Editar",
     "dashboard.index.history.title": "Atualizações recentes",
     "dashboard.index.history.text": "As últimas páginas modificadas por ti serão exibidas aqui para facilitar a sua consulta no futuro.",
-    "dashboard.index.license.title": "Kirby license",
+    "dashboard.index.license.title": "Licença Kirby",
     "metatags": "Variáveis do site",
-    "metatags.info": "Kirby info",
-    "metatags.license": "Kirby license",
-    "metatags.version.toolkit": "Toolkit version",
-    "metatags.version.kirby": "Kirby version",
-    "metatags.version.panel": "Panel version",
+    "metatags.info": "Informação Kirby",
+    "metatags.license": "Licença Kirby",
+    "metatags.version.toolkit": "Versão toolkit",
+    "metatags.version.kirby": "Versão Kirby",
+    "metatags.version.panel": "Versão panel",
     "metatags.back": "Voltar ao Painel",
-    "metatags.files": "Site files",
-    "site.delete.error": "The site cannot be deleted",
+    "metatags.files": "Ficheiros do site",
+    "site.delete.error": "A site não pode ser apagada",
     "pages.show.settings": "Configurações de página",
     "pages.show.preview": "Abrir preview",
     "pages.show.changeurl": "Mudar URL",
-    "pages.show.invisible": "Status: invisible",
-    "pages.show.visible": "Status: visible",
-    "pages.show.changes.text": "You have unsaved changes!",
-    "pages.show.changes.button": "Discard",
+    "pages.show.invisible": "Estatuto: invisível",
+    "pages.show.visible": "Estatuto: visível",
+    "pages.show.changes.text": "Tens alteraçoes ainda não gravadas!",
+    "pages.show.changes.button": "Descartar",
     "pages.show.delete": "Apagar esta página",
     "pages.show.subpages.title": "Páginas",
     "pages.show.subpages.edit": "Editar",
@@ -91,7 +91,7 @@
     "pages.add.url.close": "Fechar",
     "pages.add.url.help": "Formato: a-z minúsculas, 0-9 e hífens",
     "pages.add.template.label": "Template",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "Não foi possível criar a página",
     "pages.add.error.title": "Falta o título",
     "pages.add.error.template": "Falta o template",
     "pages.add.error.max.headline": "Não são permitidas novas páginas",
