--- a/app/translations/ru/core.json
+++ b/app/translations/ru/core.json
@@ -1,10 +1,10 @@
 {
-    "cancel": "Отмена",
+    "cancel": "Отменить",
     "add": "Добавить",
     "addit": "Add & Edit",
     "save": "Сохранить",
     "saved": "Сохранено",
-    "change": "Change",
+    "change": "Изменить",
     "delete": "Удалить",
     "insert": "Вставить",
     "ok": "Ок",
@@ -51,16 +51,16 @@
     "dashboard.index.metatags.edit": "Настроить",
     "dashboard.index.history.title": "Ваши последние правки",
     "dashboard.index.history.text": "Последние измененные вами страницы будут показаны здесь для быстрого доступа к ним.",
-    "dashboard.index.license.title": "Kirby license",
+    "dashboard.index.license.title": "Лицензия Kirby",
     "metatags": "Переменные сайта",
     "metatags.info": "Kirby info",
-    "metatags.license": "Kirby license",
+    "metatags.license": "Лицензия Kirby",
     "metatags.version.toolkit": "Toolkit version",
-    "metatags.version.kirby": "Kirby version",
-    "metatags.version.panel": "Panel version",
+    "metatags.version.kirby": "Версия Kirby",
+    "metatags.version.panel": "Версия панели",
     "metatags.back": "Назад в панель управления",
-    "metatags.files": "Site files",
-    "site.delete.error": "The site cannot be deleted",
+    "metatags.files": "Файлы сайта",
+    "site.delete.error": "Сайт не может быть удален",
     "pages.show.settings": "Настройки страницы",
     "pages.show.preview": "Предпросмотр",
     "pages.show.changeurl": "Изменить ссылку (ЧПУ)",
@@ -204,7 +204,7 @@
     "users.delete.error": "Аккаунт не может быть удален",
     "users.delete.error.permission": "You are not allowed to delete users",
     "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.lastadmin": "Вы не можете удалить единственного администратора",
     "users.avatar.drop": "Перетащите картинку для аккаунта сюда…",
     "users.avatar.click": "…или кликните для выбора",
     "users.avatar.error.type": "Формат файлов картинок может быть JPG, PNG или GIF",
@@ -214,7 +214,7 @@
     "users.avatar.delete.error": "Аватар (фото) к аккаунту не может быть удален",
     "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
     "users.avatar.delete.success": "Аватар (фото) к аккаунту удален",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "У пользователя нет аватара",
     "users.error.missing": "Аккаунт не найден",
     "user.error.lastadmin": "You are the only admin. This cannot be changed.",
     "form.error.missing": "The form cannot be found",
