--- a/app/translations/nl/core.json
+++ b/app/translations/nl/core.json
@@ -1,17 +1,17 @@
 {
     "cancel": "Annuleren",
     "add": "Toevoegen",
-    "addit": "Add & Edit",
+    "addit": "Toevoegen en bewerken",
     "save": "Opslaan",
     "saved": "Opgeslagen!",
     "change": "Wijzig",
     "delete": "Verwijder",
     "insert": "Toevoegen",
     "ok": "Ok",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
+    "routes.error.invalid": "Ongeldige Panel URL",
+    "controller.error.invalid": "Ongeldige controller",
+    "controller.error.action": "Ongeldige actie",
+    "view.error.invalid": "Ongeldige view:",
     "options.show": "Toon opties",
     "options.hide": "Verberg opties",
     "installation": "Installatie",
@@ -37,9 +37,9 @@
     "login.password.label": "Wachtwoord",
     "login.error": "Ongeldige gebruikersnaam of wachtwoord",
     "login.button": "Login",
-    "login.log.error.permissions": "Login log file is not writable.",
+    "login.log.error.permissions": "Login logbestand heeft geen schrijfrecht.",
     "logout": "Uitloggen",
-    "topbar.error.class.definition": "Missing topbar definition for class:",
+    "topbar.error.class.definition": "Ontbrekende 'topbar definition' voor class:",
     "dashboard": "Dashboard",
     "dashboard.index.pages.title": "Pagina's",
     "dashboard.index.pages.edit": "Wijzig",
@@ -60,7 +60,7 @@
     "metatags.version.panel": "Panel versie",
     "metatags.back": "Terug naar het dashboard",
     "metatags.files": "Sitebestanden",
-    "site.delete.error": "The site cannot be deleted",
+    "site.delete.error": "De site kan niet worden verwijderd",
     "pages.show.settings": "Pagina-opties",
     "pages.show.preview": "Open voorbeeld",
     "pages.show.changeurl": "Verander URL",
@@ -91,48 +91,48 @@
     "pages.add.url.close": "Sluiten",
     "pages.add.url.help": "Toegestaan: a-z (kleine letters) en standaard streepjes (-)",
     "pages.add.template.label": "Template",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "De pagina kon niet worden aangemaakt",
     "pages.add.error.title": "De titel ontbreekt",
-    "pages.add.error.template": "Het template ontbreekt",
+    "pages.add.error.template": "De template ontbreekt",
     "pages.add.error.max.headline": "Geen nieuwe pagina's toegestaan",
     "pages.add.error.max.text": "Je hebt het maximum aantal van subpagina's voor deze pagina bereikt.",
     "pages.url.uid.label": "URL-toevoeging",
     "pages.url.uid.label.option": "Maak op basis van titel",
     "pages.url.error.exists": "Er bestaat al een pagina met deze URL-toevoeging",
     "pages.url.error.move": "De URL-toevoeging kan niet worden gewijzigd",
-    "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
-    "pages.toggle.position": "Position",
-    "pages.toggle.invisible": "invisible",
+    "pages.url.error.rights": "Je kunt de URL van deze pagina niet wijzigen",
+    "pages.url.home.error.error": "De URL voor home en error-pagina's kan niet worden gewijzigd",
+    "pages.toggle.position": "Positie",
+    "pages.toggle.invisible": "Onzichtbaar",
     "pages.toggle.publish": "Wil je de status wijzigen naar **zichtbaar**?",
     "pages.toggle.hide": "Wil je de status wijzigen naar **onzichtbaar**?",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
-    "pages.delete.headline": "Wil je de pagina verwijderen?",
+    "pages.toggle.error.error": "De status van de error-pagina kan niet gewijzigd worden",
+    "pages.delete.headline": "Weet je zeker dat je deze pagina wil verwijderen?",
     "pages.delete.error.home.headline": "De homepage kan niet worden verwijderd",
-    "pages.delete.error.home.text": "Je probeert de homepage te verwijderen. Dit is niet mogelijk en het zou kunnen leiden tot ongewenste resultaten.",
+    "pages.delete.error.home.text": "Je probeert de homepage te verwijderen. Dit is niet mogelijk en zou kunnen leiden tot ongewenste resultaten.",
     "pages.delete.error.error.headline": "De fout-pagina kan niet worden verwijderd",
-    "pages.delete.error.error.text": "Je probeert de fout-pagina te verwijderen. Dit is niet mogelijk en het zou kunnen leiden tot ongewenste resultaten.",
-    "pages.delete.error.children.headline": "Deze pagina kan niet worden verwijderd",
+    "pages.delete.error.error.text": "Je probeert de fout-pagina te verwijderen. Dit is niet mogelijk en zou kunnen leiden tot ongewenste resultaten.",
+    "pages.delete.error.children.headline": "De pagina kan niet worden verwijderd",
     "pages.delete.error.children.text": "Deze pagina heeft subpagina's en kan niet worden verwijderd. Verwijder eerst de subpagina's.",
-    "pages.delete.error.blocked.headline": "Deze pagina kan niet worden verwijderd",
+    "pages.delete.error.blocked.headline": "De pagina kan niet worden verwijderd",
     "pages.delete.error.blocked.text": "Deze pagina is vergrendeld en kan niet worden verwijderd.",
     "pages.search.help": "Zoek door pagina's op URL. Je kunt navigeren tussen de pagina's met je pijltjestoetsen. Met enter ga je naar de geselecteerde pagina.",
     "pages.search.noresults": "Geen zoekresultaten. Probeer het opnieuw met een andere URL.",
-    "pages.error.missing": "De pagina kan niet worden gevonden.",
-    "subpages": "Pages",
+    "pages.error.missing": "De pagina kan niet worden gevonden",
+    "subpages": "Pagina's",
     "subpages.index.headline": "Pagina's in",
     "subpages.index.back": "Terug",
     "subpages.index.add": "Nieuwe pagina toevoegen",
     "subpages.index.add.first.text": "Deze pagina heeft nog geen subpagina's",
-    "subpages.index.add.first.button": "Voeg de eerste toe",
+    "subpages.index.add.first.button": "Voeg de eerste pagina toe",
     "subpages.index.visible": "Zichtbare pagina's",
     "subpages.index.visible.help": "Sleep onzichtbare pagina's hiernaartoe om ze zichtbaar te maken.",
     "subpages.index.invisible": "Onzichtbare pagina's",
     "subpages.index.invisible.help": "Sleep zichtbare pagina's hiernaartoe om ze onzichtbaar te maken.",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "Deze pagina mag geen subpagina's bevatten",
+    "subpages.add.error.more": "Deze pagina kan niet meer subpagina's bevatten",
     "subpages.error.missing": "De pagina kan niet worden gevonden",
-    "files": "Files",
+    "files": "Bestanden",
     "files.index.headline": "Bestanden voor",
     "files.index.back": "Terug",
     "files.index.upload": "Upload een nieuw bestand",
@@ -140,15 +140,15 @@
     "files.index.upload.first.button": "Upload het eerste bestand",
     "files.index.edit": "Wijzgen",
     "files.index.delete": "Verwijderen",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
-    "files.add.error.extension.missing": "You cannot upload files without extension",
-    "files.add.error.extension.forbidden": "Forbidden file extension",
-    "files.add.error.mime.forbidden": "Forbidden mime type",
-    "files.add.error.htaccess": "htaccess files cannot be uploaded",
-    "files.add.error.invisible": "Invisible files cannot be uploaded",
-    "files.add.blueprint.type.error": "Page only allows:",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.index.error.disabled": "Deze pagina mag geen bestanden bevatten",
+    "files.add.error.max": "Het maximum aantal bestanden voor deze pagina is bereikt.",
+    "files.add.error.extension.missing": "Je kunt geen bestanden uploaden zonder bestandsextensie",
+    "files.add.error.extension.forbidden": "Bestandsextensie niet toegestaan",
+    "files.add.error.mime.forbidden": "Mime type niet toegestaan",
+    "files.add.error.htaccess": "htaccess bestanden kunnen niet geüpload worden",
+    "files.add.error.invisible": "Onzichtbare bestanden kunnen niet geüpload worden",
+    "files.add.blueprint.type.error": "Pagina laat alleen het volgende toe:",
+    "files.add.blueprint.size.error": "Pagina laat alleen bestanden toe met een maximum bestandsgrootte van",
     "files.show.name.label": "Bestandsnaam",
     "files.show.info.label": "Type / grootte / afmetingen",
     "files.show.link.label": "Publieke link",
@@ -173,7 +173,7 @@
     "users.index.delete": "Verwijderen",
     "users.form.username.label": "Gebruikersnaam",
     "users.form.username.placeholder": "Jouw gebruikersnaam",
-    "users.form.username.help": "Toegestaan: a-z (kleine letters) en standaard streepjes (-)",
+    "users.form.username.help": "Toegestaan: a-z (kleine letters), 0-9 en streepjes (-)",
     "users.form.username.readonly": "De gebruikersnaam kan niet worden gewijzigd",
     "users.form.firstname.label": "Voornaam",
     "users.form.lastname.label": "Achternaam",
@@ -196,29 +196,29 @@
     "users.form.back": "Terug naar gebruikers",
     "users.form.error.password.confirm": "Bevestig je wachtwoord",
     "users.form.error.update": "De gebruiker kan niet worden gewijzigd",
-    "users.form.error.update.rights": "You are not allowed to update this user",
+    "users.form.error.update.rights": "Je hebt niet voldoende rechten om deze gebruiker te wijzigen",
     "users.form.error.create": "De gebruiker kan niet worden aangemaakt",
     "users.form.error.permissions.title": "De 'accounts'-map heeft niet voldoende rechten.",
     "users.form.error.permissions.text": "Zorg ervoor dat de map 'site/accounts' bestaat en schrijfrechten heeft.",
     "users.delete.headline": "Wil je deze gebruiker verwijderen?",
     "users.delete.error": "De gebruiker kan niet worden verwijderd",
-    "users.delete.error.permission": "You are not allowed to delete users",
-    "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
-    "users.avatar.drop": "Sleep een avatar-afbeelding hiernaartoe...",
+    "users.delete.error.permission": "Je hebt niet voldoende rechten om gebruikers te verwijderen",
+    "users.delete.error.permission.single": "Je hebt niet voldoende rechten om deze gebruiker te verwijderen",
+    "users.delete.error.lastadmin": "Je kan de laatste admin niet verwijderen",
+    "users.avatar.drop": "Sleep een profielfoto hiernaartoe...",
     "users.avatar.click": "... of klik hier om afbeelding te selecteren",
     "users.avatar.error.type": "Je kunt alleen .jpg, .png en .gif bestanden uploaden",
     "users.avatar.error.folder.headline": "De avatar-map heeft geen schrijfrechten.",
     "users.avatar.error.folder.text": "Zorg ervoor dat de map <strong>/assets/avatars</strong> bestaat en schrijfrechten heeft om avatars te uploaden.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.permission": "Je hebt niet voldoende rechtsen om deze avatar te wijzigen",
     "users.avatar.delete.error": "De avatar kan niet worden verwijderd",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "Je hebt niet voldoende rechten om de avatar van deze gebruiker te verwijderen",
     "users.avatar.delete.success": "De avatar is verwijderd",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "Deze gebruiker heeft geen avatar",
     "users.error.missing": "De gebruiker kan niet worden gevonden",
-    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
-    "form.error.missing": "The form cannot be found",
-    "form.construct.error.invalid": "Invalid form construction method",
+    "user.error.lastadmin": "Jij bent de enige admin. Dit kan niet gewijzigd worden.",
+    "form.error.missing": "Het formulier kon niet gevonden worden.",
+    "form.construct.error.invalid": "Ongeldige formulier construction method",
     "fields.required": "Verplicht",
     "fields.date.label": "Datum",
     "fields.date.months": [
@@ -263,12 +263,12 @@
     "fields.structure.add": "Toevoegen",
     "fields.structure.add.first": "Voeg het eerste item toe",
     "fields.structure.empty": "Nog geen items.",
-    "fields.structure.entry.error": "The item could not be found",
+    "fields.structure.entry.error": "Item kon niet gevonden worden",
     "fields.structure.cancel": "Annuleren",
     "fields.structure.save": "Ok",
     "fields.structure.edit": "Wijzigen",
     "fields.structure.delete": "Verwijderen",
-    "fields.structure.delete.label": "Do you really want to delete this entry?",
+    "fields.structure.delete.label": "Wil je deze entry verwijderen?",
     "fields.tags.label": "Tags",
     "fields.tel.label": "Telefoon",
     "fields.textarea.buttons.bold.label": "Dikgedrukte tekst",
@@ -283,10 +283,10 @@
     "fields.toggle.no": "Nee",
     "fields.toggle.on": "Aan",
     "fields.toggle.off": "Uit",
-    "fields.error.missing.controller": "The field controller file is missing",
-    "fields.error.missing.class": "The field controller class is missing",
-    "fields.error.route.invalid": "Invalid field route",
-    "fields.error.extended": "The field cannot be extended",
+    "fields.error.missing.controller": "De 'field controller' file ontbreekt",
+    "fields.error.missing.class": "De 'field controller' class ontbreekt",
+    "fields.error.route.invalid": "Ongeldige field route",
+    "fields.error.extended": "Het veld kan niet worden uitgebreid",
     "editor.link.url.label": "URL invoegen",
     "editor.link.text.label": "Link-tekst",
     "editor.link.text.help": "De link-tekst is niet verplicht",
@@ -296,8 +296,8 @@
     "editor.email.text.help": "De link-tekst is niet verplicht",
     "editor.file.empty": "Deze pagina heeft geen bestanden",
     "editor.image.empty": "Deze pagina heeft geen afbeeldingen",
-    "autocomplete.method.error": "Invalid autocomplete method",
-    "blueprints.error.default.missing": "Missing default blueprint",
+    "autocomplete.method.error": "Ongeldige autocomplete methode",
+    "blueprints.error.default.missing": "Default blueprint ontbreekt",
     "error": "Foutmelding",
     "error.headline": "Foutmelding"
 }
